--- a/LabSem3/Views/Labs/Details.cshtml
+++ b/LabSem3/Views/Labs/Details.cshtml
@@ -14,24 +14,20 @@
         <div>
             <h4>Computer Room Diagram</h4>
         </div>
-        <img src="https://res.cloudinary.com/hoangkien0601/image/upload/v1655830520/computer_lab_floorplan_kvfxh7.jpg" alt="Alternate Text" />
+        <img src="@Model.Thumbnail" alt="Alternate Text" />
     </div>
     <div class="card shadow mb-4">
         <div class="card-header py-3">
-            <h6 class="m-0 font-weight-bold text-primary">List Equiptment</h6>
+            <h6 class=" font-weight-bold text-primary" style="margin-bottom:10px">List Equiptment</h6>
             <form action="/Labs/Details/@Model.Id" method="get" class="d-none d-sm-inline-block form-inline navbar-search">
                 <div class="">
                     <div>
                         <div class="row">
-                            <div style="margin-right: 20px">
+                            <div style="margin:0 10px">
                                 <div style="text-align: left">Search</div>
                                 <div class="input-group">
-                                    <input value="@ViewBag.Search" name="search" type="search" class="form-control bg-default border-0 small" placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2">
-                                    <div class="input-group-append">
-                                        <button class="btn btn-primary" type="submit">
-                                            <i class="fas fa-search fa-sm"></i>
-                                        </button>
-                                    </div>
+                                    <input value="@ViewBag.Search" name="search" type="search" class="form-control bg-default border-2 small" placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2">
+
                                 </div>
                             </div>
 
@@ -47,20 +43,28 @@
                                     </select>
                                 </div>
                             </div>
-                            @*<div style="margin-right: 20px">
-                                <div style="text-align: left">EndTime</div>
+
+                            <div style="margin-right: 20px">
+                                <div style="text-align: left">Type Equipments</div>
                                 <div class="input-group">
-                                    <input value="@ViewBag.EndTime" name="EndTime" type="date" class="form-control bg-default border-0 small" aria-label="Search" aria-describedby="basic-addon2">
-                                    <div class="input-group-append">
-                                        <button class="btn btn-primary" type="submit">
-                                            <i class="fas fa-search fa-sm"></i>
-                                        </button>
-                                    </div>
+                                    <select class="form-control" id="typeEquipment" name="typeEquipment">
+                                        <option selected value="">-- Choose Type Equipments -- </option>
+                                        @foreach (var typeEquipments in ViewBag.TypeEquipments)
+                                        {
+                                            <option value="@typeEquipments.Id">@typeEquipments.Name</option>
+                                        }
+                                    </select>
                                 </div>
-                            </div>*@
+                            </div>
+                            <div style="margin-top:23px" >
+                                <button class="btn btn-primary" type="submit">
+                                    <i class="fas fa-search fa-sm"></i>
+                                </button>
+                            </div>
                         </div>
 
                     </div>
+                    
                 </div>
                 <div>
                 </div>
