bach update database

--- a/LabSem3/Views/Document/Details.cshtml
+++ b/LabSem3/Views/Document/Details.cshtml
@@ -59,11 +59,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.EquipmentId)
+            @Html.DisplayNameFor(model => model.TypeEquipmentId)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.EquipmentId)
+            @Html.DisplayFor(model => model.TypeEquipmentId)
         </dd>
 
     </dl>
