--- a/LabSem3/Views/Labs/Details.cshtml
+++ b/LabSem3/Views/Labs/Details.cshtml
@@ -107,9 +107,9 @@
                                             }
                                         </td>
                                         <td>
-                                            <a><i class="fa-solid fa-info"></i></a>
-                                            <a style="margin:0 10px"><i class="fa-solid fa-pen-to-square"></i></a>
-                                            <a href="#"><i class="fa-solid fa-trash-can"></i></a>
+                                            <a href="/Equipment/Details/@equipment.Id"><i class="fa-solid fa-info"></i></a>
+                                            <a href="/Equipment/Edit/@equipment.Id" style="margin:0 10px"><i class="fa-solid fa-pen-to-square"></i></a>
+                                            <a href="/Equipment/Delete/@equipment.Id"><i class="fa-solid fa-trash-can"></i></a>
                                         </td>
                                     </tr>
                                 }
