--- a/LabSem3/Views/Document/Create.cshtml
+++ b/LabSem3/Views/Document/Create.cshtml
@@ -30,53 +30,16 @@
         </div>
     </div>
 
-    @*<div class="form-group">
-            @Html.LabelFor(model => model.Status, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            <select class="form-control col-2" style="margin-left: 10px" id="Status" name="Status">
-                @foreach (var item in EnumHelper.GetSelectList(typeof(LabSem3.Enum.DocumentStatusEnum)))
-                {
-                    <option value="@item.Value">@item.Text</option>
-                }
-            </select>
-        </div>
-        </div>*@
-
-        @*<div class="form-group">
-            @Html.LabelFor(model => model.CreatedAt, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.CreatedAt, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CreatedAt, "", new { @class = "text-danger" })
-            </div>
-        </div>*@
-
-       @* <div class="form-group">
-            @Html.LabelFor(model => model.UpdatedAt, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.UpdatedAt, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.UpdatedAt, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.DeletedAt, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.DeletedAt, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.DeletedAt, "", new { @class = "text-danger" })
-            </div>
-        </div>*@
-
     <div class="form-group">
-        @Html.LabelFor(model => model.EquipmentId, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.TypeEquipmentId, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            <select id="EquipmentId" name="EquipmentId" class="col-2 form-control valid">
-                @foreach (var equipment in ViewBag.Equipments)
+            <select id="TypeEquipmentId" name="TypeEquipmentId" class="col-2 form-control valid">
+                @foreach (var typeEquipment in ViewBag.TypeEquipments)
                 {
-                    <option value="@equipment.Id">@equipment.Name</option>
+                    <option value="@typeEquipment.Id">@typeEquipment.Name</option>
                 }
-
             </select>
-            @Html.ValidationMessageFor(model => model.EquipmentId, "", new { @class = "text-danger" })
+            @Html.ValidationMessageFor(model => model.TypeEquipmentId, "", new { @class = "text-danger" })
         </div>
     </div>
 
