--- a/LabSem3/Views/Document/Delete.cshtml
+++ b/LabSem3/Views/Document/Delete.cshtml
@@ -36,35 +36,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.CreatedAt)
+            @Html.DisplayNameFor(model => model.TypeEquipment.Name)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.CreatedAt)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.UpdatedAt)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.UpdatedAt)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.DeletedAt)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.DeletedAt)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.EquipmentId)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.EquipmentId)
+            @Html.DisplayFor(model => model.TypeEquipment.Name)
         </dd>
 
     </dl>
