--- a/LabSem3/Views/Document/Edit.cshtml
+++ b/LabSem3/Views/Document/Edit.cshtml
@@ -49,15 +49,14 @@
         <div class="form-group">
             <label class="control-label col-md-2" for="TypeEquipmentId">TypeEquipment Name</label>
             <div class="col-md-10">
-                @* @Html.EditorFor(model => model.EquipmentId, new { htmlAttributes = new { @class = "form-control" } })*@
-                <select id="EquipmentId" name="EquipmentId" class="form-control col-2">
-                    @foreach (var equipment in ViewBag.Equipment)
+                <select id="TypeEquipmentId" name="TypeEquipmentId" class="form-control col-2">
+                    @foreach (var equipment in ViewBag.TypeEquipments)
                     {
-                        <option value="@equipment.Id" @(equipment.Id == Model.Equipment.Id ? "selected" : "")>@equipment.Name</option>
+                        <option value="@equipment.Id" @(equipment.Id == Model.TypeEquipment.Id ? "selected" : "")>@equipment.Name</option>
                     }
 
                 </select>
-                @Html.ValidationMessageFor(model => model.EquipmentId, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.TypeEquipmentId, "", new { @class = "text-danger" })
             </div>
         </div>
 
