modify view login and register

--- a/LabSem3/Views/Account/Register.cshtml
+++ b/LabSem3/Views/Account/Register.cshtml
@@ -2,9 +2,9 @@
 
 @{
     ViewBag.Title = "Register";
+    Layout = "~/Views/Shared/_LayoutCleanForLoginRegister.cshtml";
 }
-
-<h2>Register</h2>
+<br />
 @if (TempData["False"] != null)
 {
     <div class="alert alert-danger" role="alert">
@@ -17,7 +17,7 @@
     @Html.AntiForgeryToken()
 
 <div class="form-horizontal">
-    <h4>RegisterViewModel</h4>
+    <h4>Create a new account</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
