--- a/LabSem3/Views/Account/Delete.cshtml
+++ b/LabSem3/Views/Account/Delete.cshtml
@@ -89,7 +89,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <input style=" background-color: antiquewhite; border-color: skyblue;" type="submit" value="Delete" class="btn btn-default" /> |
             @Html.ActionLink("Back to List", "Index")
         </div>
     }
