--- a/LabSem3/Views/Department/Edit.cshtml
+++ b/LabSem3/Views/Department/Edit.cshtml
@@ -87,7 +87,7 @@
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Save" class="btn btn-default" />
+            <input style=" background-color: antiquewhite; border-color: skyblue;" type="submit" value="Save" class="btn btn-default" />
         </div>
     </div>
 </div>
