--- a/LabSem3/Views/Shared/_LayoutLabversion002.cshtml
+++ b/LabSem3/Views/Shared/_LayoutLabversion002.cshtml
@@ -258,7 +258,7 @@
                             {
                                 <span class="mr-2 d-none d-lg-inline text-gray-600 small">@User.Identity.GetUserName()</span>
                                 @*<span class="mr-2 d-none d-lg-inline text-gray-600 small">@User.Identity.GetUserId()</span>
-                    <span class="mr-2 d-none d-lg-inline text-gray-600 small">@User.IsInRole("Admin")</span>*@
+                    <span class="mr-2 d-none d-lg-inline text-gray-600 small">@User.IsInRole("ADMIN")</span>*@
 
 
                                 <img class="img-profile rounded-circle"
